--- a/webproject/.babelrc
+++ b/webproject/.babelrc
@@ -1,5 +1,8 @@
 {
 	"presets":[
-    	"@babel/preset-env", "@babel/preset-react"
+		"@babel/preset-react", "@babel/preset-env"
+	],
+	"plugins": [
+		"@babel/plugin-proposal-class-properties"
 	]
 }
